Tidying up a bit